Switch some classes to records